plot PV in emission timeline and hourly emission (still buggy)

--- a/cea/default.config
+++ b/cea/default.config
@@ -1935,6 +1935,19 @@ y-metric-to-plot.type = MultiChoiceParameter
 y-metric-to-plot.choices = Qhs_sys, Qww_sys, Qcs_sys, E_sys, Qhs_sys_NATURALGAS, Qhs_sys_BIOGAS, Qhs_sys_SOLAR, Qhs_sys_DRYBIOMASS, Qhs_sys_WETBIOMASS, Qhs_sys_GRID, Qhs_sys_COAL, Qhs_sys_WOOD, Qhs_sys_OIL, Qhs_sys_HYDROGEN, Qhs_sys_NONE, Qww_sys_NATURALGAS, Qww_sys_BIOGAS, Qww_sys_SOLAR, Qww_sys_DRYBIOMASS, Qww_sys_WETBIOMASS, Qww_sys_GRID, Qww_sys_COAL, Qww_sys_WOOD, Qww_sys_OIL, Qww_sys_HYDROGEN, Qww_sys_NONE, Qcs_sys_NATURALGAS, Qcs_sys_BIOGAS, Qcs_sys_SOLAR, Qcs_sys_DRYBIOMASS, Qcs_sys_WETBIOMASS, Qcs_sys_GRID, Qcs_sys_COAL, Qcs_sys_WOOD, Qcs_sys_OIL, Qcs_sys_HYDROGEN, Qcs_sys_NONE, E_sys_NATURALGAS, E_sys_BIOGAS, E_sys_SOLAR, E_sys_DRYBIOMASS, E_sys_WETBIOMASS, E_sys_GRID, E_sys_COAL, E_sys_WOOD, E_sys_OIL, E_sys_HYDROGEN, E_sys_NONE
 y-metric-to-plot.help = Select the metric(s) to plot for the Y-axis.
 
+pv-code = 
+pv-code.type = ColumnChoiceParameter
+pv-code.help = Codes of PV panel to consider for emission calculations. Only one PV code can be selected at a time.
+    For different PV codes, please run the plot multiple times.
+    PV panels can help electrical technologies avoid grid electricity consumption, thus reducing emissions caused by grid.
+    However, they might have embodied emissions during manufacturing.
+    CEA does not optimize for PV size. Instead, all PVs computed by PV potential script are considered.
+    Requires PV potential script to be run beforehand if PV contributions are to be included.
+    PV code is defined in {scenario}\inputs\database\COMPONENTS\CONVERSION\PHOTOVOLTAIC_PANELS.csv.
+pv-code.locator = get_db4_components_conversion_conversion_technology_csv
+pv-code.kwargs = conversion_technology=PHOTOVOLTAIC_PANELS
+pv-code.column = code
+
 y-metric-unit = kgCO2e
 y-metric-unit.type = ChoiceParameter
 y-metric-unit.choices = tonCO2e, kgCO2e, gCO2e
@@ -1962,6 +1975,20 @@ y-metric-to-plot.type = MultiChoiceParameter
 y-metric-to-plot.choices = operation_Qhs_sys, operation_Qww_sys, operation_Qcs_sys, operation_E_sys, production_wall_ag, production_wall_bg, production_wall_part, production_win_ag, production_roof, production_upperside, production_underside, production_floor, production_base, production_technical_systems, biogenic_wall_ag, biogenic_wall_bg, biogenic_wall_part, biogenic_win_ag, biogenic_roof, biogenic_upperside, biogenic_underside, biogenic_floor, biogenic_base, biogenic_technical_systems, demolition_wall_ag, demolition_wall_bg, demolition_wall_part, demolition_win_ag, demolition_roof, demolition_upperside, demolition_underside, demolition_floor, demolition_base, demolition_technical_systems
 y-metric-to-plot.help = Select the metric(s) to plot for the Y-axis. Metrics count all wall types, windows, base, floor (below and above ground).
 y-metric-to-plot.category = Y-axis settings
+
+pv-code = 
+pv-code.type = ColumnChoiceParameter
+pv-code.help = Codes of PV panel to consider for emission calculations. Only one PV code can be selected at a time.
+    For different PV codes, please run the plot multiple times.
+    PV panels can help electrical technologies avoid grid electricity consumption, thus reducing emissions caused by grid.
+    However, they might have embodied emissions during manufacturing.
+    CEA does not optimize for PV size. Instead, all PVs computed by PV potential script are considered.
+    Requires PV potential script to be run beforehand if PV contributions are to be included.
+    PV code is defined in {scenario}\inputs\database\COMPONENTS\CONVERSION\PHOTOVOLTAIC_PANELS.csv.
+pv-code.locator = get_db4_components_conversion_conversion_technology_csv
+pv-code.kwargs = conversion_technology=PHOTOVOLTAIC_PANELS
+pv-code.column = code
+pv-code.category = Y-axis settings
 
 y-metric-unit = kgCO2e
 y-metric-unit.type = ChoiceParameter
