hide unnecessary parameters

--- a/cea/default.config
+++ b/cea/default.config
@@ -973,6 +973,7 @@ peak-load-velocity.category = Parameters of simplified model
 equivalent-length-factor = 0.2
 equivalent-length-factor.type = RealParameter
 equivalent-length-factor.help = fraction of pressure losses expected dues to accessories in the network (valid values within 0.0 and 0.6)
+equivalent-length-factor.category = Advanced
 
 peak-load-percentage = 100
 peak-load-percentage.type = RealParameter
