--- a/cea/default.config
+++ b/cea/default.config
@@ -958,17 +958,17 @@ network-model.help = Choose either simplified (seconds) or detailed model (sever
 min-head-substation = 20
 min-head-substation.type = RealParameter
 min-head-substation.help = Minimum head loss in kPa expected at each thermal transfer substation
-min-head-substation.category = Parameters of simplified model
+min-head-substation.category = Simplified Model Parameters
 
 hw-friction-coefficient = 100
 hw-friction-coefficient.type = IntegerParameter
 hw-friction-coefficient.help = Hanzen-Williams friction coefficient considered for the pipes in mm
-hw-friction-coefficient.category = Parameters of simplified model
+hw-friction-coefficient.category = Simplified Model Parameters
 
 peak-load-velocity = 2
 peak-load-velocity.type = RealParameter
 peak-load-velocity.help = Maximum velocity expected in pipes in m/s (Higher values result in smaller pipe diameters)
-peak-load-velocity.category = Parameters of simplified model
+peak-load-velocity.category = Simplified Model Parameters
 
 equivalent-length-factor = 0.2
 equivalent-length-factor.type = RealParameter
@@ -978,70 +978,70 @@ equivalent-length-factor.category = Advanced
 peak-load-percentage = 100
 peak-load-percentage.type = RealParameter
 peak-load-percentage.help = Percentage of the peak demand in % to use for pipe sizing (valid values within 0 and 200)
-peak-load-percentage.category = Parameters of simplified model
+peak-load-percentage.category = Simplified Model Parameters
 
 set-diameter = true
 set-diameter.type = BooleanParameter
 set-diameter.help = True if diameters are set by maximum velocity (2m/s), false if diameters are considered a fixed input.
-set-diameter.category = Parameters of detailed model
+set-diameter.category = Detailed Model Parameters
 
 load-max-edge-flowrate-from-previous-run = false
 load-max-edge-flowrate-from-previous-run.type = BooleanParameter
 load-max-edge-flowrate-from-previous-run.help = True to bypass the calc_max_edge_flowrate function, using results from the previous simulation (useful for debugging).
-load-max-edge-flowrate-from-previous-run.category = Parameters of detailed model
+load-max-edge-flowrate-from-previous-run.category = Detailed Model Parameters
 
 start-t = 0
 start-t.type = IntegerParameter
 start-t.help = Start hour for calculations (0-based).
-start-t.category = Parameters of detailed model
+start-t.category = Detailed Model Parameters
 
 stop-t = 8760
 stop-t.type = IntegerParameter
 stop-t.help = Stop hour for calculations (0-based, upper bound).
-stop-t.category = Parameters of detailed model
+stop-t.category = Detailed Model Parameters
 
 use-representative-week-per-month = false
 use-representative-week-per-month.type = BooleanParameter
 use-representative-week-per-month.help = True to use the data for first week of each month instead of the full month.
-use-representative-week-per-month.category = Parameters of detailed model
+use-representative-week-per-month.category = Detailed Model Parameters
 
 minimum-mass-flow-iteration-limit = 30
 minimum-mass-flow-iteration-limit.type = IntegerParameter
 minimum-mass-flow-iteration-limit.help = Maximum number of iterations permitted for the increase of minimum mass flows in the network.
-minimum-mass-flow-iteration-limit.category = Parameters of detailed model
+minimum-mass-flow-iteration-limit.category = Detailed Model Parameters
 
 minimum-edge-mass-flow = 0.1
 minimum-edge-mass-flow.type = RealParameter
 minimum-edge-mass-flow.help = Minimum mass flow rate permitted in the network (in kg/s). If the mass flow rate in any edge is below this value at any time period, the thermal network will be re-sized accordingly
-minimum-edge-mass-flow.category = Parameters of detailed model
+minimum-edge-mass-flow.category = Detailed Model Parameters
 
 diameter-iteration-limit = 10
 diameter-iteration-limit.type = IntegerParameter
 diameter-iteration-limit.help = Maximum number of iterations permitted for the network diameter optimization (relevant for looped network result convergence).
-diameter-iteration-limit.category = Parameters of detailed model
+diameter-iteration-limit.category = Detailed Model Parameters
 
 substation-cooling-systems = ahu, aru, scu
 substation-cooling-systems.type = MultiChoiceParameter
 substation-cooling-systems.choices = ahu, aru, scu, re, data
 substation-cooling-systems.help = List of cooling loads to be supplied (DC mode)
-substation-cooling-systems.category = Parameters of detailed model
+substation-cooling-systems.category = Detailed Model Parameters
 
 substation-heating-systems = ahu, aru, shu, ww
 substation-heating-systems.type = MultiChoiceParameter
 substation-heating-systems.choices = ahu, aru, shu, ww
 substation-heating-systems.help = List of heating loads to be supplied (DH mode)
-substation-heating-systems.category = Parameters of detailed model
+substation-heating-systems.category = Detailed Model Parameters
 
 temperature-control = VT
 temperature-control.type = ChoiceParameter
 temperature-control.choices = VT, CT
 temperature-control.help = Type of control strategy for plant operation: "VT" (Variable Temperature / Variable Flow) or "CT" (Constant Temperature / Variable Flow).
-temperature-control.category = Parameters of detailed model
+temperature-control.category = Detailed Model Parameters
 
 plant-supply-temperature = 80
 plant-supply-temperature.type = RealParameter
 plant-supply-temperature.help = Supply temperature of plants in celsius (relevant if temperature-control is set to 'CT').
-plant-supply-temperature.category = Parameters of detailed model
+plant-supply-temperature.category = Detailed Model Parameters
 
 
 [thermal-network-optimization]
