number of components validation

--- a/cea/default.config
+++ b/cea/default.config
@@ -1621,6 +1621,7 @@ overwrite-supply-settings.help = True to use 'connected-buildings' parameter ins
 connected-buildings =
 connected-buildings.type = BuildingsParameter
 connected-buildings.help = List of buildings to connect. Ignored if 'overwrite-supply-settings' is False. Leave blank to include all buildings.
+
 plant-building =
 plant-building.type = StringParameter
 plant-building.nullable = true
@@ -1641,6 +1642,12 @@ plant-building.help = Building name to use as anchor for plant placement. Plant 
 # allow-looped-networks.type = BooleanParameter
 # allow-looped-networks.help = True if network loops should be created.
 # create-plant.category = Advanced
+
+number-of-components =
+number-of-components.type = IntegerParameter
+number-of-components.nullable = true
+number-of-components.help = Expected number of disconnected components in user-provided network (for validation). Leave blank to skip validation and accept any topology. If specified, Part 1 will error if actual component count doesn't match, helping catch unintentional gaps in network topology. Each component will get one plant auto-assigned.
+number-of-components.category = User-Defined Layout
 
 edges-shp-path =
 edges-shp-path.type = FileParameter
