expose state scenario generator to dashboard

--- a/cea/default.config
+++ b/cea/default.config
@@ -442,6 +442,81 @@ grid-decarbonise-target-emission-factor.help = Target emission factor for grid d
 grid-decarbonise-target-emission-factor.nullable = True
 grid-decarbonise-target-emission-factor.category = Grid Decarbonisation
 
+[district-events]
+year-of-event = 1900
+year-of-event.type = IntegerParameter
+year-of-event.nullable = true
+year-of-event.help = Year when the event takes place.
+
+archetypes = 
+archetypes.type = ColumnMultiChoiceParameter
+archetypes.help = Archetype(s) that will have new constructions applied after the event.
+archetypes.locator = get_database_archetypes_construction_type
+archetypes.column = const_type
+
+wall-U-value =
+wall-U-value.type = RealParameter
+wall-U-value.nullable = true
+wall-U-value.help = New U-value [W/m2K] to apply to the selected archetypes after the event.
+wall-U-value.category = New Wall Properties
+wall-GHG-emission = 
+wall-GHG-emission.type = RealParameter
+wall-GHG-emission.nullable = true
+wall-GHG-emission.help = New embodied GHG emission factor [kgCO2e/m2] to apply to the selected archetypes after the event.
+wall-GHG-emission.category = New Wall Properties
+wall-GHG-biogenic-emission =
+wall-GHG-biogenic-emission.type = RealParameter
+wall-GHG-biogenic-emission.nullable = true
+wall-GHG-biogenic-emission.help = New biogenic GHG emission factor [kgCO2e/m2] stored in biogenic materials to apply to the selected archetypes after the event.
+wall-GHG-biogenic-emission.category = New Wall Properties
+wall-Lifetime =
+wall-Lifetime.type = IntegerParameter
+wall-Lifetime.nullable = true
+wall-Lifetime.help = New lifetime [years] to apply to the selected archetypes after the event.
+wall-Lifetime.category = New Wall Properties
+
+roof-U-value =
+roof-U-value.type = RealParameter
+roof-U-value.nullable = true
+roof-U-value.help = New U-value [W/m2K] to apply to the selected archetypes after the event.
+roof-U-value.category = New Roof Properties
+roof-GHG-emission =
+roof-GHG-emission.type = RealParameter
+roof-GHG-emission.nullable = true
+roof-GHG-emission.help = New embodied GHG emission factor [kgCO2e/m2] to apply to the selected archetypes after the event.
+roof-GHG-emission.category = New Roof Properties
+roof-GHG-biogenic-emission =
+roof-GHG-biogenic-emission.type = RealParameter
+roof-GHG-biogenic-emission.nullable = true
+roof-GHG-biogenic-emission.help = New biogenic GHG emission factor [kgCO2e/m2] stored in biogenic materials to apply to the selected archetypes after the event.
+roof-GHG-biogenic-emission.category = New Roof Properties
+roof-Lifetime =
+roof-Lifetime.type = IntegerParameter
+roof-Lifetime.nullable = true
+roof-Lifetime.help = New lifetime [years] to apply to the selected archetypes after the event.
+roof-Lifetime.category = New Roof Properties
+
+base-U-value =
+base-U-value.type = RealParameter
+base-U-value.nullable = true
+base-U-value.help = New U-value [W/m2K] to apply to the selected archetypes after the event.
+base-U-value.category = New Base Properties
+base-GHG-emission =
+base-GHG-emission.type = RealParameter
+base-GHG-emission.nullable = true
+base-GHG-emission.help = New embodied GHG emission factor [kgCO2e/m2] to apply to the selected archetypes after the event.
+base-GHG-emission.category = New Base Properties
+base-GHG-biogenic-emission =
+base-GHG-biogenic-emission.type = RealParameter
+base-GHG-biogenic-emission.nullable = true
+base-GHG-biogenic-emission.help = New biogenic GHG emission factor [kgCO2e/m2] stored in biogenic materials to apply to the selected archetypes after the event.
+base-GHG-emission.category = New Base Properties
+base-Lifetime =
+base-Lifetime.type = IntegerParameter
+base-Lifetime.nullable = true
+base-Lifetime.help = New lifetime [years] to apply to the selected archetypes after the event.
+base-Lifetime.category = New Base Properties
+
 [extract-reference-case]
 destination = {general:scenario}/../..
 destination.type = PathParameter
