--- a/cea/default.config
+++ b/cea/default.config
@@ -510,7 +510,7 @@ base-GHG-biogenic-emission =
 base-GHG-biogenic-emission.type = RealParameter
 base-GHG-biogenic-emission.nullable = true
 base-GHG-biogenic-emission.help = New biogenic GHG emission factor [kgCO2e/m2] stored in biogenic materials to apply to the selected archetypes after the event.
-base-GHG-emission.category = New Base Properties
+base-GHG-biogenic-emission.category = New Base Properties
 base-Lifetime =
 base-Lifetime.type = IntegerParameter
 base-Lifetime.nullable = true
