--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
           cache: true
 
       - name: Install CEA
-        run: pixi run pip install .
+        run: pixi run pip install . --group dev
 
       - name: Run unit tests
         run: pixi run cea test --type unittest
