--- a/cea/default.config
+++ b/cea/default.config
@@ -377,14 +377,11 @@ overheating-warning.type = BooleanParameter
 overheating-warning.help = Set to False to bypass overheating warning.
 overheating-warning.category = Advanced
 
-[costs]
-capital = true
-capital.type = BooleanParameter
-capital.help = Estimate Capital costs (total and annualized) due to supply systems (allocated according to the supply-systems input database)
-
-operational = true
-operational.type = BooleanParameter
-operational.help = Estimate Operational costs (variable and fixed) due to supply systems operation (allocated according to the supply-systems input database)
+[system-costs]
+network-types = DH, DC
+network-types.type = MultiChoiceParameter
+network-types.choices = DH, DC
+network-types.help = Network types to assess: District Heating (DH) and/or District Cooling (DC). Select both to calculate complete building costs.
 
 [emissions]
 year-end =
