two network choice parameter

--- a/cea/default.config
+++ b/cea/default.config
@@ -378,10 +378,18 @@ overheating-warning.help = Set to False to bypass overheating warning.
 overheating-warning.category = Advanced
 
 [system-costs]
-network-types = DH, DC
-network-types.type = MultiChoiceParameter
-network-types.choices = DH, DC
-network-types.help = Network types to assess: District Heating (DH) and/or District Cooling (DC). Select both to calculate complete building costs.
+network-name-dc =
+network-name-dc.type = DCNetworkLayoutChoiceParameter
+network-name-dc.choices = []
+network-name-dc.nullable = true
+network-name-dc.help = Select an existing DC (district cooling) network to calculate costs. Leave empty to skip DC network costs. Networks are created by the 'thermal-network:part 2' script.
+
+network-name-dh =
+network-name-dh.type = DHNetworkLayoutChoiceParameter
+network-name-dh.choices = []
+network-name-dh.nullable = true
+network-name-dh.help = Select an existing DH (district heating) network to calculate costs. Leave empty to skip DH network costs. Networks are created by the 'thermal-network:part 2' script.
+
 
 [emissions]
 year-end =
