Add nullable support to SingleBuildingParameter
Enhanced SingleBuildingParameter to support nullable values by reading a '.nullable' option from the config. Updated the encode and decode methods to handle null or empty values appropriately. Changed 'plant-building.type' to SingleBuildingParameter and enabled nullable in default.config.

--- a/cea/default.config
+++ b/cea/default.config
@@ -1623,7 +1623,7 @@ connected-buildings.type = BuildingsParameter
 connected-buildings.help = List of buildings to connect. Ignored if 'overwrite-supply-settings' is False. Leave blank to include all buildings.
 
 plant-building =
-plant-building.type = StringParameter
+plant-building.type = SingleBuildingParameter
 plant-building.nullable = true
 plant-building.help = Building name to use as anchor for plant placement. Plant will be placed near the closest junction node to this building. Leave blank to use building with highest demand (anchor load). If PLANT node is missing in User-Defined Network, it will be auto-created.
 
