Require network name for layout variants
Enforces that a descriptive network name must be provided for network layout variants, removing the previous behavior of auto-generating a timestamp when left blank. Updates validation logic and help text to reflect this requirement, ensuring clarity and preventing accidental overwrites.

--- a/cea/default.config
+++ b/cea/default.config
@@ -1611,8 +1611,7 @@ network-type.help = Type of district network: DH = district heating, or DC = dis
 
 network-name =
 network-name.type = NetworkLayoutNameParameter
-network-name.nullable = true
-network-name.help = Optional name for this network layout variant. Leave blank to auto-generate timestamp (e.g., '20250107_143022'). Use descriptive names for what-if scenarios (e.g., 'all-connected').
+network-name.help = Use descriptive names for what-if scenarios (e.g., 'all-connected').
 
 overwrite-supply-settings = true
 overwrite-supply-settings.type = BooleanParameter
