Refactor network_type config to thermal_network section
Moved the network_type parameter from the optimization-new section to the thermal-network section in config and codebase. Updated references throughout the optimization_new modules, tests, and scripts.yml to use config.thermal_network.network_type for consistency and maintainability.

--- a/cea/scripts.yml
+++ b/cea/scripts.yml
@@ -334,7 +334,7 @@ Energy Supply System Optimisation:
     interfaces: [cli, dashboard]
     module: cea.optimization_new.domain
     parameters: ['general:debug', 'general:scenario', 'general:multiprocessing', 'general:number-of-cpus-to-keep-free',
-                 optimization-new]
+                 'thermal-network:network-type', 'thermal-network:network-name', 'optimization-new']
     input-files:
       - [get_street_network]
       - [get_total_demand]
