proposing ui change for network: part 1

--- a/cea/default.config
+++ b/cea/default.config
@@ -1579,10 +1579,10 @@ typology.category = Optional
 [decentralized]
 
 [network-layout]
-network-type = DH
-network-type.type = ChoiceParameter
-network-type.choices = DH, DC
-network-type.help = Type of district network: DH = district heating, or DC = district cooling
+# network-type = DH
+# network-type.type = ChoiceParameter
+# network-type.choices = DH, DC
+# network-type.help = Type of district network: DH = district heating, or DC = district cooling
 
 network-name =
 network-name.type = NetworkLayoutNameParameter
@@ -1644,10 +1644,15 @@ network-geojson-path.extensions = geojson
 network-geojson-path.help = Path to user-defined network GeoJSON file with combined nodes (Points) and edges (LineStrings). Node features require 'building' (str) and 'type' (str) attributes. Edge features require 'type_mat' attribute (str). Do NOT use with 'user-edges-shp-path' or 'user-nodes-shp-path' (mutually exclusive).
 network-geojson-path.category = User-Defined Layout
 
-consider-only-buildings-with-demand = true
-consider-only-buildings-with-demand.type = BooleanParameter
-consider-only-buildings-with-demand.help = True to only consider buildings with heating/cooling demand during CEA piping layout auto-generation. Ignored if User-Defined Layout is provided.
-consider-only-buildings-with-demand.category = Auto-Generated Layout Parameters
+# consider-only-buildings-with-demand = true
+# consider-only-buildings-with-demand.type = BooleanParameter
+# consider-only-buildings-with-demand.help = True to only consider buildings with heating/cooling demand during CEA piping layout auto-generation. Ignored if User-Defined Layout is provided.
+# consider-only-buildings-with-demand.category = Auto-Generated Layout Parameters
+
+connected-buildings-filter = buildings_with_either_cooling_or_heating_demand
+connected-buildings-filter.type = ChoiceParameter
+connected-buildings-filter.choices = buildings_with_only_cooling_demand, buildings_with_only_heating_demand, buildings_with_both_cooling_and_heating_demand, buildings_with_either_cooling_or_heating_demand, all_buildings
+connected-buildings-filter.help = Filter defining which buildings are considered for network connection.
 
 algorithm = kou
 algorithm.type = ChoiceParameter
