user provided geometry helper function

--- a/cea/default.config
+++ b/cea/default.config
@@ -1651,8 +1651,9 @@ network-geojson-path.category = User-Defined Layout
 
 connected-buildings-filter = buildings_with_either_cooling_or_heating_demand
 connected-buildings-filter.type = ChoiceParameter
-connected-buildings-filter.choices = buildings_with_only_cooling_demand, buildings_with_only_heating_demand, buildings_with_both_cooling_and_heating_demand, buildings_with_either_cooling_or_heating_demand, all_buildings
+connected-buildings-filter.choices = buildings_with_only_cooling_demand, buildings_with_only_heating_demand, buildings_with_either_cooling_or_heating_demand, no_filter
 connected-buildings-filter.help = Filter defining which buildings are considered for network connection.
+connected-buildings-filter.category = Auto-Generated Layout Parameters
 
 algorithm = kou
 algorithm.type = ChoiceParameter
