--- a/cea/default.config
+++ b/cea/default.config
@@ -1596,6 +1596,13 @@ connected-buildings =
 connected-buildings.type = BuildingsParameter
 connected-buildings.help = List of buildings to connect. Ignored if 'overwrite-supply-settings' is False. Leave blank to include all buildings.
 
+connected-buildings-filter = buildings_with_district_cooling_or_heating
+connected-buildings-filter.type = ChoiceParameter
+connected-buildings-filter.choices = buildings_with_district_cooling, buildings_with_district_heating, buildings_with_district_cooling_or_heating, no_filter
+connected-buildings-filter.help = Filter which buildings to include in the network layout.
+    'buildings_with_district_cooling (heating)': only buildings with cooling (heating) demand or connected to a district-scale cooling (heating) system in Building Properties/Supply.
+    'buildings_with_district_cooling_or_heating': buildings with cooling or heating demand or connected to a district-scale cooling or heating system in Building Properties/Supply.
+
 plant-building =
 plant-building.type = SingleBuildingParameter
 plant-building.nullable = true
@@ -1648,12 +1655,6 @@ network-geojson-path.category = User-Defined Layout
 # consider-only-buildings-with-demand.type = BooleanParameter
 # consider-only-buildings-with-demand.help = True to only consider buildings with heating/cooling demand during CEA piping layout auto-generation. Ignored if User-Defined Layout is provided.
 # consider-only-buildings-with-demand.category = Auto-Generated Layout Parameters
-
-connected-buildings-filter = buildings_with_either_cooling_or_heating_demand
-connected-buildings-filter.type = ChoiceParameter
-connected-buildings-filter.choices = buildings_with_only_cooling_demand, buildings_with_only_heating_demand, buildings_with_either_cooling_or_heating_demand, no_filter
-connected-buildings-filter.help = Filter defining which buildings are considered for network connection.
-connected-buildings-filter.category = Auto-Generated Layout Parameters
 
 algorithm = kou
 algorithm.type = ChoiceParameter
