Update CI workflow to use new test task names
Replaces 'cea test --type unittest' and 'cea test --type integration' with 'unittest' and 'integration' tasks in the CI workflow. Updates pyproject.toml to define the new 'unittest' task using pytest.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,8 +43,8 @@ jobs:
         run: pixi run pip install . --group dev
 
       - name: Run unit tests
-        run: pixi run cea test --type unittest
+        run: pixi run unittest
 
       - name: Run integration tests
         if: github.event.pull_request.draft == false
-        run: pixi run cea test --type integration
+        run: pixi run integration
