include-service parameter

--- a/cea/default.config
+++ b/cea/default.config
@@ -1586,7 +1586,13 @@ typology.category = Optional
 
 network-name =
 network-name.type = NetworkLayoutNameParameter
+network-name.nullable = false
 network-name.help = Use descriptive names for what-if scenarios (e.g., 'all-connected').
+
+include-services = DC, DH
+include-services.type = MultiChoiceParameter
+include-services.choices = DC, DH
+include-services.help = Type of district thermal service(s) to include for the layout design: DH = district heating, DC = district cooling
 
 overwrite-supply-settings = true
 overwrite-supply-settings.type = BooleanParameter
@@ -1595,13 +1601,6 @@ overwrite-supply-settings.help = True to use 'connected-buildings' parameter ins
 connected-buildings =
 connected-buildings.type = BuildingsParameter
 connected-buildings.help = List of buildings to connect. Ignored if 'overwrite-supply-settings' is False. Leave blank to include all buildings.
-
-connected-buildings-filter = buildings_with_district_cooling_or_heating
-connected-buildings-filter.type = ChoiceParameter
-connected-buildings-filter.choices = buildings_with_district_cooling, buildings_with_district_heating, buildings_with_district_cooling_or_heating, no_filter
-connected-buildings-filter.help = Filter which buildings to include in the network layout.
-    'buildings_with_district_cooling (heating)': only buildings with cooling (heating) demand or connected to a district-scale cooling (heating) system in Building Properties/Supply.
-    'buildings_with_district_cooling_or_heating': buildings with cooling or heating demand or connected to a district-scale cooling or heating system in Building Properties/Supply.
 
 plant-building =
 plant-building.type = SingleBuildingParameter
