not overwrite + user-defined

--- a/cea/default.config
+++ b/cea/default.config
@@ -1582,7 +1582,7 @@ typology.category = Optional
 # network-type = DH
 # network-type.type = ChoiceParameter
 # network-type.choices = DH, DC
-# network-type.help = Type of district network: DH = district heating, or DC = district cooling
+# network-type.help = Type of district network: DH = district heating, or DC = district cooling.
 
 network-name =
 network-name.type = NetworkLayoutNameParameter
@@ -1592,7 +1592,7 @@ network-name.help = Use descriptive names for what-if scenarios (e.g., 'all-conn
 include-services = DC, DH
 include-services.type = MultiChoiceParameter
 include-services.choices = DC, DH
-include-services.help = Type of district thermal service(s) to include for the layout design: DH = district heating, DC = district cooling
+include-services.help = Type of district thermal service(s) to include for the layout design: DH = district heating, DC = district cooling. Leave blank to include both services.
 
 overwrite-supply-settings = true
 overwrite-supply-settings.type = BooleanParameter
