working with wrong input locator

--- a/cea/default.config
+++ b/cea/default.config
@@ -1650,10 +1650,10 @@ network-geojson-path.extensions = geojson
 network-geojson-path.help = Path to user-defined network GeoJSON file with combined nodes (Points) and edges (LineStrings). Node features require 'building' (str) and 'type' (str) attributes. Edge features require 'type_mat' attribute (str). Do NOT use with 'user-edges-shp-path' or 'user-nodes-shp-path' (mutually exclusive).
 network-geojson-path.category = User-Defined Layout
 
-# consider-only-buildings-with-demand = true
-# consider-only-buildings-with-demand.type = BooleanParameter
-# consider-only-buildings-with-demand.help = True to only consider buildings with heating/cooling demand during CEA piping layout auto-generation. Ignored if User-Defined Layout is provided.
-# consider-only-buildings-with-demand.category = Auto-Generated Layout Parameters
+consider-only-buildings-with-demand = true
+consider-only-buildings-with-demand.type = BooleanParameter
+consider-only-buildings-with-demand.help = True to only consider buildings with heating/cooling demand during CEA piping layout auto-generation. Ignored if User-Defined Layout is provided.
+consider-only-buildings-with-demand.category = Auto-Generated Layout Parameters
 
 algorithm = kou
 algorithm.type = ChoiceParameter
