plant by dh or dc

--- a/cea/default.config
+++ b/cea/default.config
@@ -1602,10 +1602,15 @@ connected-buildings =
 connected-buildings.type = BuildingsParameter
 connected-buildings.help = List of buildings to connect. Ignored if 'overwrite-supply-settings' is False. Leave blank to include all buildings.
 
-plant-building =
-plant-building.type = SingleBuildingParameter
-plant-building.nullable = true
-plant-building.help = Building name to use as anchor for plant placement. Plant will be placed near the closest junction node to this building. Leave blank to use building with highest demand (anchor load). If PLANT node is missing in User-Defined Network, it will be auto-created.
+cooling-plant-building =
+cooling-plant-building.type = BuildingsParameter
+cooling-plant-building.nullable = true
+cooling-plant-building.help = Buildings to use as anchors for plant(s) placement. Ignored if DC is not selected for include-services. Plants will be placed near the closest junction node to the buildings. Leave blank to use building with highest cooling demand. If PLANT node is missing in User-Defined Network, it will be auto-created.
+
+heating-plant-building =
+heating-plant-building.type = BuildingsParameter
+heating-plant-building.nullable = true
+heating-plant-building.help = Buildings to use as anchors for plant(s) placement. Ignored if DH is not selected for include-services. Plants will be placed near the closest junction node to the buildings. Leave blank to use building with highest heating demand. If PLANT node is missing in User-Defined Network, it will be auto-created.
 
 # pipe-diameter = 150
 # pipe-diameter.type = IntegerParameter
