--- a/cea/default.config
+++ b/cea/default.config
@@ -1603,14 +1603,14 @@ connected-buildings.type = BuildingsParameter
 connected-buildings.help = List of buildings to connect. Ignored if 'overwrite-supply-settings' is False. Leave blank to include all buildings.
 
 cooling-plant-building =
-cooling-plant-building.type = BuildingsParameter
+cooling-plant-building.type = StringParameter
 cooling-plant-building.nullable = true
-cooling-plant-building.help = Buildings to use as anchors for plant(s) placement. Ignored if DC is not selected for include-services. Plants will be placed near the closest junction node to the buildings. Leave blank to use building with highest cooling demand. If PLANT node is missing in User-Defined Network, it will be auto-created.
+cooling-plant-building.help = Buildings to use as anchors for cooling plant(s) placement (comma-separated, max 3). Ignored if DC is not selected for include-services. For auto-generated layouts: multiple plants can be created in a single network. For user-defined layouts, only works with single-component networks. Leave blank to use building with highest cooling demand. Cannot be used if PLANT nodes already exist in user-defined network.
 
 heating-plant-building =
-heating-plant-building.type = BuildingsParameter
+heating-plant-building.type = StringParameter
 heating-plant-building.nullable = true
-heating-plant-building.help = Buildings to use as anchors for plant(s) placement. Ignored if DH is not selected for include-services. Plants will be placed near the closest junction node to the buildings. Leave blank to use building with highest heating demand. If PLANT node is missing in User-Defined Network, it will be auto-created.
+heating-plant-building.help = Buildings to use as anchors for heating plant(s) placement (comma-separated, max 3). Ignored if DH is not selected for include-services. For auto-generated layouts: multiple plants can be created in a single network. For user-defined layouts, only works with single-component networks. Leave blank to use building with highest heating demand. Cannot be used if PLANT nodes already exist in user-defined network.
 
 # pipe-diameter = 150
 # pipe-diameter.type = IntegerParameter
